# bookforge

./: BookForge.toml  Cargo.toml  config.toml  start.sh
assets/css/: main.css
assets/js/: script.js
locales/: en.yml  fr.yml
src/: error.rs  lib.rs  main.rs
src/migrations/: m20260126_000001_create_user_table.rs  m20260126_000002_create_book_table.rs  mod.rs
src/models/: book.rs  user.rs
src/routes/: book.rs  mod.rs  router.rs  template_ctx.rs  user.rs
src/state/: api_config.rs  config.rs  error.rs  listener.rs  mod.rs
templates/: 404.html  base.html  error.html  index.html
templates/books/: edit.html  new.html  search.html  show.html
templates/components/: cards.html  dropdown.html  fields.html  inputs.html  typography.html
templates/layout/: footer.html  header.html
templates/users/: edit.html  index.html  new.html
