[package]
name = "bookforge"
version = "0.1.0"
edition = "2024"

[lib]
name = "bookforge"
path = "src/lib.rs"

[[bin]]
name = "bookforge"
path = "src/main.rs"

[dependencies]
askama = "0.15.1"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
axum = "0.8.8"
serde = "1.0.228"
# static-serve = "0.4.0"
static-serve = { git = "https://github.com/M4SS-Code/static-serve" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "2.0.0-rc", features = [ "runtime-tokio", "debug-print", "sqlx-sqlite"] }
sea-orm-migration = "2.0.0-rc"
camino = { version = "1.2.2", features = [ "serde1" ] }
toml = { version = "0.9.11", features = ["preserve_order"] }
snafu = "0.8.9"
xdg = "3.0.0"
dirs = "6.0.0"
# backend for log
pretty_env_logger = "0.5.0"
# custom logger
log = "0.4.29"
